--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,9 @@ a {
     text-decoration: none;
 }
 
+.paddingTop {
+	padding-top: 100px;
+}
 
 /* .background-ats{
     background-attachment: fixed;
@@ -78,6 +81,30 @@ a {
     width: 50%;
 
 }
+/* ----------------------Navber Menu--------------------- */
+#Menu {
+	position: fixed;
+	width: 100%;
+	z-index: 1000;
+    /* top: 42px; */
+}
+
+.menu ul li a {
+    font-size: 14px;
+}
+.menu ul li::after {
+    content: " ";
+    width: 0%;
+    height: 2px;
+    margin: auto;
+    background-color: red;
+    display: block;
+    transition: .5s;
+  }
+  
+  .menu ul li:hover::after {
+    width: 70%;
+  }
 
 .bg_color {
     background-color: rgb(29, 95, 112);
@@ -88,9 +115,7 @@ a {
     font-size: 14px;
 }
 
-.menu ul li a {
-    font-size: 14px;
-}
+
 
 .profile {
     color: white;
@@ -98,8 +123,8 @@ a {
 }
 
 .offer_icon {
-    padding-left: 15%;
-    /* float: right; */
+    /* padding-left: 15%; */
+    float: right;
 }
 
 .organic_img_1 {
@@ -722,7 +747,7 @@ a {
     transition: 0.5s;
     width: 100%;
     padding: 20px 0;
-
+    display: flex;
 }
 
 .blog_popular_content:hover {
@@ -847,6 +872,7 @@ a {
     border-top: 1px solid #ececec;
     border-bottom: 1px solid #ececec;
     margin: 40px 0;
+    display: flex;
 }
 
 .exciting_tags p a {
@@ -892,6 +918,9 @@ a {
     color: #999898;
 }
 
+.page_author_content {
+    display: flex;
+}
 .page_author_content span p {
     font-size: 15px;
     color: #686868;
@@ -903,6 +932,9 @@ a {
     height: 125px;
     border-radius: 50%;
     margin-top: 30px;
+}
+.blogDetails_comment_content{
+    display: flex;
 }
 
 .blogDetails_comment_content span {
@@ -925,6 +957,9 @@ a {
     margin-top: 20px;
     color: black;
     transition: 0.5s;
+}
+.blogDetails_comment_content .reply_btn{
+    display: flex;
 }
 
 .blogDetails_comment_content .reply_btn h5 a:hover {
@@ -1457,6 +1492,20 @@ a {
 	color: #686868 !important;
     margin-top: 10px;
 }
+.compereTrustIcon:hover{
+	color: red !important;
+	transition: 0.6s;
+	
+}
+.compereTrustIcon{
+	opacity: 0;
+	transition: 0.8s;
+}
+
+.compaire_img:hover .compereTrustIcon{
+	background: #f5f0f0;
+	opacity: 1;
+  }
 
 /* ------------------------------------ */
 
@@ -1468,6 +1517,9 @@ a {
     border: 1px solid #e6e1e1;
     padding: 5px 20px;
     margin-right: 135px;
+}
+.t_b_margin{
+    margin: 10px 0;
 }
 .cartQuantity a{
     color: black;
